AB#213784: parent page header spacing fixes

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/parent-page-header/parent-page-header.scss
@@ -129,7 +129,7 @@
     }
 
     .horizontal-img__inner {
-      margin: 4.5rem auto;
+      margin: 5.8rem auto;
     }
 
     @include medium {
@@ -147,7 +147,7 @@
       max-height: 58.0rem;
 
       .horizontal-img__inner {
-        margin: 4.5rem auto;
+        margin: 5.8rem auto;
       }
     }
   }
